--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +7,14 @@
     <title>Word Guess Game</title>
 
     <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">    
     <link rel="stylesheet" href="assets/style.css">
     <script type="text/javascript" src="assets/game.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-
+    
 </head>
-
 <body>
-
+   
     <div class="container title">
         <!--grid-->
         <div class="row row-1">
@@ -34,17 +32,17 @@
                 <!-- second column, row-2, game with javascript-->
                 <p id="directions-text">Press any letter to get started!</p>
                 <p id="userchoice-text"></p>
-                <p id="wins-text"></p>
-                <p id="losses-text"></p>
-                <p id="answer-holder"></p>
-                <p id="guess-countdown"></p>
-                <p id="letters-guessed"></p>
-                <p id="list-index"></p>
+                <p id="wins-text">Wins:</p>
+                <p id="losses-text">Losses:</p>
+                <p id="answer-holder">___________________</p>
+                <p id="guess-countdown"># of guesses left</p>
+                <p id="letters-guessed">Letters Guessed </p>
+                <p id="list-index">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
             </div>
             <div class="w-100"></div>
         </div>
 
-        <div class="row row-4">
+        <div class="row row-3">
             <!-- footer -->
             <div class="col-md-12">
                 <!-- footer is photo -->
