--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <div class="row row-2">
             <!--second row is hangman photo in first column-->
             <div class="col">
-                <img src="assets/images/hangman.jpg" alt="Hangman" id="hangmanimage">
+                <img src="assets/images/hangman.jpg" alt="hangman" id="hangmanimage">
+                <div id="picture"></div>
             </div>
             <div class="col">
                 <!-- second column, row-2, game with javascript-->
